Added KeyValue CRUD ops, to be written to sqlite
