# app/app.pb.go
@@ -10,6 +10,8 @@ It is generated from these files:
 
 It has these top-level messages:
 	EchoMessage
+	KeyValMessage
+	EmptyMessage
 */
 package app
 
@@ -50,8 +52,42 @@ func (m *EchoMessage) GetValue() string {
 	return ""
 }
 
+type KeyValMessage struct {
+	Key   string `protobuf:"bytes,1,opt,name=key" json:"key,omitempty"`
+	Value string `protobuf:"bytes,2,opt,name=value" json:"value,omitempty"`
+}
+
+func (m *KeyValMessage) Reset()                    { *m = KeyValMessage{} }
+func (m *KeyValMessage) String() string            { return proto.CompactTextString(m) }
+func (*KeyValMessage) ProtoMessage()               {}
+func (*KeyValMessage) Descriptor() ([]byte, []int) { return fileDescriptor0, []int{1} }
+
+func (m *KeyValMessage) GetKey() string {
+	if m != nil {
+		return m.Key
+	}
+	return ""
+}
+
+func (m *KeyValMessage) GetValue() string {
+	if m != nil {
+		return m.Value
+	}
+	return ""
+}
+
+type EmptyMessage struct {
+}
+
+func (m *EmptyMessage) Reset()                    { *m = EmptyMessage{} }
+func (m *EmptyMessage) String() string            { return proto.CompactTextString(m) }
+func (*EmptyMessage) ProtoMessage()               {}
+func (*EmptyMessage) Descriptor() ([]byte, []int) { return fileDescriptor0, []int{2} }
+
 func init() {
 	proto.RegisterType((*EchoMessage)(nil), "app.EchoMessage")
+	proto.RegisterType((*KeyValMessage)(nil), "app.KeyValMessage")
+	proto.RegisterType((*EmptyMessage)(nil), "app.EmptyMessage")
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -66,6 +102,10 @@ const _ = grpc.SupportPackageIsVersion4
 
 type AppClient interface {
 	Echo(ctx context.Context, in *EchoMessage, opts ...grpc.CallOption) (*EchoMessage, error)
+	KeyValCreate(ctx context.Context, in *KeyValMessage, opts ...grpc.CallOption) (*EmptyMessage, error)
+	KeyValRead(ctx context.Context, in *KeyValMessage, opts ...grpc.CallOption) (*KeyValMessage, error)
+	KeyValUpdate(ctx context.Context, in *KeyValMessage, opts ...grpc.CallOption) (*EmptyMessage, error)
+	KeyValDelete(ctx context.Context, in *KeyValMessage, opts ...grpc.CallOption) (*EmptyMessage, error)
 }
 
 type appClient struct {
@@ -85,10 +125,50 @@ func (c *appClient) Echo(ctx context.Context, in *EchoMessage, opts ...grpc.Call
 	return out, nil
 }
 
+func (c *appClient) KeyValCreate(ctx context.Context, in *KeyValMessage, opts ...grpc.CallOption) (*EmptyMessage, error) {
+	out := new(EmptyMessage)
+	err := grpc.Invoke(ctx, "/app.App/KeyValCreate", in, out, c.cc, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *appClient) KeyValRead(ctx context.Context, in *KeyValMessage, opts ...grpc.CallOption) (*KeyValMessage, error) {
+	out := new(KeyValMessage)
+	err := grpc.Invoke(ctx, "/app.App/KeyValRead", in, out, c.cc, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *appClient) KeyValUpdate(ctx context.Context, in *KeyValMessage, opts ...grpc.CallOption) (*EmptyMessage, error) {
+	out := new(EmptyMessage)
+	err := grpc.Invoke(ctx, "/app.App/KeyValUpdate", in, out, c.cc, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *appClient) KeyValDelete(ctx context.Context, in *KeyValMessage, opts ...grpc.CallOption) (*EmptyMessage, error) {
+	out := new(EmptyMessage)
+	err := grpc.Invoke(ctx, "/app.App/KeyValDelete", in, out, c.cc, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // Server API for App service
 
 type AppServer interface {
 	Echo(context.Context, *EchoMessage) (*EchoMessage, error)
+	KeyValCreate(context.Context, *KeyValMessage) (*EmptyMessage, error)
+	KeyValRead(context.Context, *KeyValMessage) (*KeyValMessage, error)
+	KeyValUpdate(context.Context, *KeyValMessage) (*EmptyMessage, error)
+	KeyValDelete(context.Context, *KeyValMessage) (*EmptyMessage, error)
 }
 
 func RegisterAppServer(s *grpc.Server, srv AppServer) {
@@ -113,6 +193,78 @@ func _App_Echo_Handler(srv interface{}, ctx context.Context, dec func(interface{
 	return interceptor(ctx, in, info, handler)
 }
 
+func _App_KeyValCreate_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(KeyValMessage)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(AppServer).KeyValCreate(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/app.App/KeyValCreate",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(AppServer).KeyValCreate(ctx, req.(*KeyValMessage))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _App_KeyValRead_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(KeyValMessage)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(AppServer).KeyValRead(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/app.App/KeyValRead",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(AppServer).KeyValRead(ctx, req.(*KeyValMessage))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _App_KeyValUpdate_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(KeyValMessage)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(AppServer).KeyValUpdate(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/app.App/KeyValUpdate",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(AppServer).KeyValUpdate(ctx, req.(*KeyValMessage))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _App_KeyValDelete_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(KeyValMessage)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(AppServer).KeyValDelete(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/app.App/KeyValDelete",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(AppServer).KeyValDelete(ctx, req.(*KeyValMessage))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 var _App_serviceDesc = grpc.ServiceDesc{
 	ServiceName: "app.App",
 	HandlerType: (*AppServer)(nil),
@@ -120,6 +272,22 @@ var _App_serviceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "Echo",
 			Handler:    _App_Echo_Handler,
+		},
+		{
+			MethodName: "KeyValCreate",
+			Handler:    _App_KeyValCreate_Handler,
+		},
+		{
+			MethodName: "KeyValRead",
+			Handler:    _App_KeyValRead_Handler,
+		},
+		{
+			MethodName: "KeyValUpdate",
+			Handler:    _App_KeyValUpdate_Handler,
+		},
+		{
+			MethodName: "KeyValDelete",
+			Handler:    _App_KeyValDelete_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
@@ -129,16 +297,23 @@ var _App_serviceDesc = grpc.ServiceDesc{
 func init() { proto.RegisterFile("app/app.proto", fileDescriptor0) }
 
 var fileDescriptor0 = []byte{
-	// 161 bytes of a gzipped FileDescriptorProto
+	// 288 bytes of a gzipped FileDescriptorProto
 	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xe2, 0xe2, 0x4d, 0x2c, 0x28, 0xd0,
 	0x4f, 0x2c, 0x28, 0xd0, 0x2b, 0x28, 0xca, 0x2f, 0xc9, 0x17, 0x62, 0x4e, 0x2c, 0x28, 0x90, 0x92,
 	0x49, 0xcf, 0xcf, 0x4f, 0xcf, 0x49, 0xd5, 0x4f, 0x2c, 0xc8, 0xd4, 0x4f, 0xcc, 0xcb, 0xcb, 0x2f,
 	0x49, 0x2c, 0xc9, 0xcc, 0xcf, 0x2b, 0x86, 0x28, 0x51, 0x52, 0xe6, 0xe2, 0x76, 0x4d, 0xce, 0xc8,
 	0xf7, 0x4d, 0x2d, 0x2e, 0x4e, 0x4c, 0x4f, 0x15, 0x12, 0xe1, 0x62, 0x2d, 0x4b, 0xcc, 0x29, 0x4d,
-	0x95, 0x60, 0x54, 0x60, 0xd4, 0xe0, 0x0c, 0x82, 0x70, 0x8c, 0xfc, 0xb8, 0x98, 0x1d, 0x0b, 0x0a,
-	0x84, 0xdc, 0xb9, 0x58, 0x40, 0x6a, 0x85, 0x04, 0xf4, 0x40, 0x56, 0x20, 0x69, 0x93, 0xc2, 0x10,
-	0x51, 0x92, 0x6e, 0xba, 0xfc, 0x64, 0x32, 0x93, 0xa8, 0x92, 0x80, 0x7e, 0x99, 0xa1, 0x7e, 0x6a,
-	0x45, 0x62, 0x6e, 0x41, 0x4e, 0xaa, 0x7e, 0x6a, 0x72, 0x46, 0xbe, 0x15, 0xa3, 0x56, 0x12, 0x1b,
-	0xd8, 0x6e, 0x63, 0x40, 0x00, 0x00, 0x00, 0xff, 0xff, 0xc1, 0xae, 0x04, 0x10, 0xaf, 0x00, 0x00,
-	0x00,
+	0x95, 0x60, 0x54, 0x60, 0xd4, 0xe0, 0x0c, 0x82, 0x70, 0x94, 0xcc, 0xb9, 0x78, 0xbd, 0x53, 0x2b,
+	0xc3, 0x12, 0x73, 0x60, 0xca, 0x04, 0xb8, 0x98, 0xb3, 0x53, 0x2b, 0xa1, 0x8a, 0x40, 0x4c, 0x84,
+	0x46, 0x26, 0x64, 0x8d, 0x7c, 0x5c, 0x3c, 0xae, 0xb9, 0x05, 0x25, 0x95, 0x50, 0x7d, 0x46, 0xfd,
+	0xcc, 0x5c, 0xcc, 0x8e, 0x05, 0x05, 0x42, 0xf6, 0x5c, 0x2c, 0x20, 0x5b, 0x85, 0x04, 0xf4, 0x40,
+	0x8e, 0x45, 0x72, 0x80, 0x14, 0x86, 0x88, 0x92, 0x70, 0xd3, 0xe5, 0x27, 0x93, 0x99, 0x78, 0x95,
+	0x38, 0xf4, 0xcb, 0x0c, 0xf5, 0x53, 0x93, 0x33, 0xf2, 0xad, 0x18, 0xb5, 0x84, 0x82, 0xb8, 0x78,
+	0x20, 0x2e, 0x72, 0x2e, 0x4a, 0x4d, 0x2c, 0x49, 0x15, 0x12, 0x02, 0x6b, 0x43, 0x71, 0xa4, 0x94,
+	0x20, 0xc4, 0x28, 0x24, 0xfb, 0x95, 0xa4, 0xc1, 0x66, 0x89, 0x4a, 0x09, 0x80, 0xcc, 0xca, 0x4e,
+	0xad, 0x2c, 0x4b, 0xcc, 0xd1, 0xaf, 0xce, 0x4e, 0xad, 0xac, 0x05, 0x99, 0xe9, 0xc7, 0xc5, 0x05,
+	0x31, 0x20, 0x28, 0x35, 0x31, 0x05, 0xab, 0x89, 0x58, 0xc4, 0x94, 0x24, 0xc0, 0x46, 0x0a, 0x09,
+	0x61, 0x18, 0x89, 0x70, 0x63, 0x68, 0x41, 0x0a, 0xe9, 0x6e, 0x54, 0xc2, 0xea, 0x46, 0x7f, 0x98,
+	0x99, 0x2e, 0xa9, 0x39, 0xa9, 0xc4, 0x9b, 0x09, 0x75, 0xa4, 0x16, 0x86, 0x99, 0x49, 0x6c, 0xe0,
+	0x64, 0x60, 0x0c, 0x08, 0x00, 0x00, 0xff, 0xff, 0xc5, 0x42, 0xaa, 0xca, 0x3a, 0x02, 0x00, 0x00,
 }
